deployment/k8s/ingress/AdminMongo.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: admin-mongo-ingress
spec:
  rules:
  - host: "mongoclient.swapnilsankla.com" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: admin-mongo
          servicePort: 1234
